# track-task-time

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: cli.rs  crypto.rs  edit.rs  list.rs  main.rs  model.rs  prompt.rs  report.rs  storage.rs  tasks.rs  time.rs
docs/: DDD.md  DR.md  PRD.md
