[package]
name = "ttt"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
uuid = { version = "1.8", features = ["v4"] }
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand_core = "0.6"
rpassword = "7.3"
